* 增加lwip的cmake * 增加watchdog示例 * 增加模拟i2c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ set(CMAKE_C_COMPILER_WORKS 1)
 set(CMAKE_C_COMPILER arm-none-eabi-gcc)
 set(CMAKE_ASM_COMPILER_WORKS 1)
 set(CMAKE_ASM_COMPILER arm-none-eabi-gcc)
+set(OBJCOPY arm-none-eabi-objcopy)
+set(OBJDUMP arm-none-eabi-objdump)
+set(SIZE arm-none-eabi-size)
 set(CMAKE_C_FLAGS "-mcpu=cortex-m4 -mthumb -mfpu=fpv4-sp-d16 -mfloat-abi=hard -ffunction-sections -fdata-sections -Dgcc -O0 -gdwarf-2 -g")
 set(CMAKE_ASM_FLAGS "-mcpu=cortex-m4 -mthumb -mfpu=fpv4-sp-d16 -mfloat-abi=hard -ffunction-sections -fdata-sections -x assembler-with-cpp -Wa,-mimplicit-it=thumb -gdwarf-2")
 set(CMAKE_EXE_LINKER_FLAGS "-Wl,--gc-sections,-Map=rt-thread.map,-cref,-u,Reset_Handler -T ${CMAKE_CURRENT_LIST_DIR}/board/linker_scripts/link.lds")
@@ -35,26 +38,23 @@ include_directories(
         ${RTT_ROOT}/bsp/stm32/libraries/HAL_Drivers/config
 )
 file(GLOB_RECURSE SOURCES
-        applications/main.c
-        board/board.c
-        board/CubeMX_Config/Src/stm32f4xx_hal_msp.c
+        # kernel
+        ${RTT_ROOT}/src/*
 
+        # component
         ${RTT_ROOT}/components/finsh/*
         ${RTT_ROOT}/components/libc/compilers/minilibc/*
-        ${RTT_ROOT}/components/drivers/src/*
-        ${RTT_ROOT}/components/drivers/misc/pin.c
-        ${RTT_ROOT}/components/drivers/serial/*
-        ${RTT_ROOT}/components/drivers/wlan/*
-        ${RTT_ROOT}/components/drivers/usb/usbhost/core/*
 
+        # board specific
+        applications/main.c
+        applications/test_wdt.c
+        board/board.c
+        board/CubeMX_Config/Src/stm32f4xx_hal_msp.c
         ${RTT_ROOT}/libcpu/arm/common/backtrace.c
         ${RTT_ROOT}/libcpu/arm/common/div0.c
         ${RTT_ROOT}/libcpu/arm/common/showmem.c
         ${RTT_ROOT}/libcpu/arm/cortex-m4/context_gcc.S
         ${RTT_ROOT}/libcpu/arm/cortex-m4/cpuport.c
-
-        ${RTT_ROOT}/src/*
-
         ${RTT_ROOT}/bsp/stm32/libraries/STM32F4xx_HAL/CMSIS/Device/ST/STM32F4xx/Source/Templates/gcc/startup_stm32f407xx.s
         ${RTT_ROOT}/bsp/stm32/libraries/STM32F4xx_HAL/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
         ${RTT_ROOT}/bsp/stm32/libraries/STM32F4xx_HAL/STM32F4xx_HAL_Driver/src/stm32f4xx_hal.c
@@ -73,14 +73,37 @@ file(GLOB_RECURSE SOURCES
         ${RTT_ROOT}/bsp/stm32/libraries/STM32F4xx_HAL/STM32F4xx_HAL_Driver/src/stm32f4xx_hal_gpio.c
         ${RTT_ROOT}/bsp/stm32/libraries/STM32F4xx_HAL/STM32F4xx_HAL_Driver/src/stm32f4xx_hal_uart.c
         ${RTT_ROOT}/bsp/stm32/libraries/STM32F4xx_HAL/STM32F4xx_HAL_Driver/src/stm32f4xx_hal_usart.c
+        ${RTT_ROOT}/bsp/stm32/libraries/STM32F4xx_HAL/STM32F4xx_HAL_Driver/src/stm32f4xx_hal_iwdg.c
+        ${RTT_ROOT}/bsp/stm32/libraries/STM32F4xx_HAL/STM32F4xx_HAL_Driver/src/stm32f4xx_hal_wwdg.c
 
+        # drivers
         ${RTT_ROOT}/bsp/stm32/libraries/HAL_Drivers/drv_gpio.c
         ${RTT_ROOT}/bsp/stm32/libraries/HAL_Drivers/drv_usart.c
         ${RTT_ROOT}/bsp/stm32/libraries/HAL_Drivers/drv_common.c
+        ${RTT_ROOT}/bsp/stm32/libraries/HAL_Drivers/drv_wdt.c
+        ${RTT_ROOT}/bsp/stm32/libraries/HAL_Drivers/drv_soft_i2c.c
+        ${RTT_ROOT}/components/drivers/src/*
+        ${RTT_ROOT}/components/drivers/misc/pin.c
+        ${RTT_ROOT}/components/drivers/serial/*
+        ${RTT_ROOT}/components/drivers/wlan/*
+        ${RTT_ROOT}/components/drivers/usb/usbhost/core/*
+        ${RTT_ROOT}/components/drivers/watchdog/watchdog.c
+        ${RTT_ROOT}/components/drivers/i2c/i2c_core.c
+        ${RTT_ROOT}/components/drivers/i2c/i2c_dev.c
+        ${RTT_ROOT}/components/drivers/i2c/i2c-bit-ops.c
         )
+
+include(lwip.cmake)
+
 add_definitions(-DSTM32F407xx -DRT_USING_MINILIBC -DUSE_HAL_DRIVER)
 
-add_executable(${PROJECT_NAME}.elf ${SOURCES})
+add_executable(${PROJECT_NAME}.elf ${SOURCES} ${LWIP_SOURCES})
+
+#add_custom_command(TARGET ${PROJECT_NAME}.elf POST_BUILD
+#        COMMAND ${CMAKE_OBJCOPY} -Oihex $<TARGET_FILE:${PROJECT_NAME}.elf> ${HEX_FILE}
+#        COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:${PROJECT_NAME}.elf> ${BIN_FILE}
+#        COMMENT "Building ${HEX_FILE} Building ${BIN_FILE}"
+#        )
 
 add_custom_target(UPLOAD
         arm-none-eabi-gdb -iex "target remote tcp:127.0.0.1:3333"
