--- a/.config
+++ b/.config
@@ -165,7 +165,7 @@ CONFIG_RT_USBD_THREAD_STACK_SZ=4096
 #
 # POSIX layer and C standard library
 #
-# CONFIG_RT_USING_LIBC is not set
+CONFIG_RT_USING_LIBC=y
 # CONFIG_RT_USING_PTHREADS is not set
 
 #
@@ -239,7 +239,16 @@ CONFIG_LWIP_NETIF_LOOPBACK=0
 #
 # AT commands
 #
-# CONFIG_RT_USING_AT is not set
+CONFIG_RT_USING_AT=y
+# CONFIG_AT_DEBUG is not set
+# CONFIG_AT_USING_SERVER is not set
+CONFIG_AT_USING_CLIENT=y
+CONFIG_AT_CLIENT_NUM_MAX=1
+# CONFIG_AT_USING_SOCKET is not set
+CONFIG_AT_USING_CLI=y
+# CONFIG_AT_PRINT_RAW_CMD is not set
+CONFIG_AT_CMD_MAX_LEN=128
+CONFIG_AT_SW_VERSION_NUM=0x10200
 # CONFIG_LWIP_USING_DHCPD is not set
 
 #
@@ -433,7 +442,7 @@ CONFIG_SOC_STM32F407ZG=y
 # Onboard Peripheral Drivers
 #
 CONFIG_BSP_USING_USB_TO_USART=y
-# CONFIG_BSP_USING_COM2 is not set
+CONFIG_BSP_USING_COM2=y
 # CONFIG_BSP_USING_COM3 is not set
 # CONFIG_BSP_USING_SPI_FLASH is not set
 # CONFIG_BSP_USING_EEPROM is not set
