--- a/.config
+++ b/.config
@@ -240,7 +240,7 @@ CONFIG_LWIP_NETIF_LOOPBACK=0
 # AT commands
 #
 CONFIG_RT_USING_AT=y
-# CONFIG_AT_DEBUG is not set
+CONFIG_AT_DEBUG=y
 # CONFIG_AT_USING_SERVER is not set
 CONFIG_AT_USING_CLIENT=y
 CONFIG_AT_CLIENT_NUM_MAX=1
@@ -442,8 +442,8 @@ CONFIG_SOC_STM32F407ZG=y
 # Onboard Peripheral Drivers
 #
 CONFIG_BSP_USING_USB_TO_USART=y
-CONFIG_BSP_USING_COM2=y
-# CONFIG_BSP_USING_COM3 is not set
+# CONFIG_BSP_USING_COM2 is not set
+CONFIG_BSP_USING_COM3=y
 # CONFIG_BSP_USING_SPI_FLASH is not set
 # CONFIG_BSP_USING_EEPROM is not set
 CONFIG_PHY_USING_LAN8720A=y
@@ -458,7 +458,8 @@ CONFIG_BSP_USING_GPIO=y
 CONFIG_BSP_USING_UART=y
 CONFIG_BSP_USING_UART1=y
 # CONFIG_BSP_UART1_RX_USING_DMA is not set
-# CONFIG_BSP_USING_UART3 is not set
+CONFIG_BSP_USING_UART3=y
+# CONFIG_BSP_UART3_RX_USING_DMA is not set
 # CONFIG_BSP_USING_TIM is not set
 # CONFIG_BSP_USING_PWM is not set
 # CONFIG_BSP_USING_ON_CHIP_FLASH is not set
