--- a/.config
+++ b/.config
@@ -105,7 +105,19 @@ CONFIG_FINSH_ARG_MAX=10
 #
 # Device virtual file system
 #
-# CONFIG_RT_USING_DFS is not set
+CONFIG_RT_USING_DFS=y
+CONFIG_DFS_USING_WORKDIR=y
+CONFIG_DFS_FILESYSTEMS_MAX=2
+CONFIG_DFS_FILESYSTEM_TYPES_MAX=2
+CONFIG_DFS_FD_MAX=16
+# CONFIG_RT_USING_DFS_MNTTABLE is not set
+# CONFIG_RT_USING_DFS_ELMFAT is not set
+CONFIG_RT_USING_DFS_DEVFS=y
+# CONFIG_RT_USING_DFS_ROMFS is not set
+# CONFIG_RT_USING_DFS_RAMFS is not set
+# CONFIG_RT_USING_DFS_UFFS is not set
+# CONFIG_RT_USING_DFS_JFFS2 is not set
+# CONFIG_RT_USING_DFS_NFS is not set
 
 #
 # Device Drivers
@@ -167,6 +179,11 @@ CONFIG_RT_USBD_THREAD_STACK_SZ=4096
 #
 CONFIG_RT_USING_LIBC=y
 # CONFIG_RT_USING_PTHREADS is not set
+CONFIG_RT_USING_POSIX=y
+# CONFIG_RT_USING_POSIX_MMAP is not set
+# CONFIG_RT_USING_POSIX_TERMIOS is not set
+# CONFIG_RT_USING_POSIX_AIO is not set
+# CONFIG_RT_USING_MODULE is not set
 
 #
 # Network
@@ -175,7 +192,15 @@ CONFIG_RT_USING_LIBC=y
 #
 # Socket abstraction layer
 #
-# CONFIG_RT_USING_SAL is not set
+CONFIG_RT_USING_SAL=y
+
+#
+# protocol stack implement
+#
+CONFIG_SAL_USING_LWIP=y
+CONFIG_SAL_USING_AT=y
+CONFIG_SAL_USING_POSIX=y
+CONFIG_SAL_PROTO_FAMILIES_NUM=4
 
 #
 # light weight TCP/IP stack
@@ -244,7 +269,7 @@ CONFIG_AT_DEBUG=y
 # CONFIG_AT_USING_SERVER is not set
 CONFIG_AT_USING_CLIENT=y
 CONFIG_AT_CLIENT_NUM_MAX=1
-# CONFIG_AT_USING_SOCKET is not set
+CONFIG_AT_USING_SOCKET=y
 CONFIG_AT_USING_CLI=y
 # CONFIG_AT_PRINT_RAW_CMD is not set
 CONFIG_AT_CMD_MAX_LEN=128
@@ -301,7 +326,26 @@ CONFIG_AT_SW_VERSION_NUM=0x10200
 # CONFIG_PKG_USING_COAP is not set
 # CONFIG_PKG_USING_NOPOLL is not set
 # CONFIG_PKG_USING_NETUTILS is not set
-# CONFIG_PKG_USING_AT_DEVICE is not set
+CONFIG_PKG_USING_AT_DEVICE=y
+CONFIG_PKG_AT_DEVICE_PATH="/packages/iot/at_device"
+CONFIG_PKG_AT_INIT_BY_THREAD=y
+# CONFIG_AT_DEVICE_M26 is not set
+# CONFIG_AT_DEVICE_EC20 is not set
+CONFIG_AT_DEVICE_ESP8266=y
+# CONFIG_AT_DEVICE_RW007 is not set
+# CONFIG_AT_DEVICE_SIM800C is not set
+# CONFIG_AT_DEVICE_SIM76XX is not set
+# CONFIG_AT_DEVICE_NOT_SELECTED is not set
+CONFIG_AT_DEVICE_SOCKETS_NUM=5
+CONFIG_AT_DEVICE_NAME="uart3"
+CONFIG_AT_DEVICE_RECV_BUFF_LEN=512
+CONFIG_AT_DEVICE_WIFI_SSID="rtthread"
+CONFIG_AT_DEVICE_WIFI_PASSWORD="12345678"
+# CONFIG_PKG_USING_AT_DEVICE_V140 is not set
+# CONFIG_PKG_USING_AT_DEVICE_V120 is not set
+CONFIG_PKG_USING_AT_DEVICE_LATEST_VERSION=y
+CONFIG_PKG_AT_DEVICE_VER="latest"
+CONFIG_PKG_AT_DEVICE_VER_NUM=0x99999
 # CONFIG_PKG_USING_WIZNET is not set
 
 #
